--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 blinker==1.7.0
 certifi==2023.7.22
 charset-normalizer==3.2.0
-cliapp==1.20180812.1
+cliapp==1.0.9
 click==8.1.7
 cmdtest==0.32+git
 command-not-found==0.3
